<resources>
    <string name="app_name">JobFlow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
    <string name="toast_email_empty">Vui lòng nhập email!</string>
    <string name="toast_passwork_empty">Vui lòng nhập mật khẩu!</string>
    <string name="toast_passwork_error">Mật khẩu quá ngắn. Nhập ít nhất 6 ký tự</string>
    <string name="toast_login_error">Đăng nhập thất bại</string>
    <string name="toast_complete_information">Vui lòng nhập đầy đủ thông tin</string>
    <string name="toast_date_time_err1"><![CDATA[Thời gian kết thúc phải lớn hơn thời gian bắt đầu]]></string>
    <string name="toast_date_time_err">Không thể chọn thời gian ở quá khứ</string>
    <string name="ok">Đồng ý</string>
    <string name="cancel">Hủy</string>
    <string name="toast_cancel_pick_image">Bạn đã huỷ bỏ việc chọn ảnh</string>
    <string name="online">Hoạt động</string>
    <string name="text_save">Lưu</string>
    <string name="text_project">Dự án</string>
    <string name="text_mywork">Công việc của tôi</string>
    <string name="text_message">Tin nhắn</string>
    <string name="text_notification">Thông báo</string>
    <string name="text_task_name">Tên nhiệm vụ</string>
    <string name="text_job_des">Mô tả công việc</string>
    <string name="text_messenger">Nhập tin nhắn ...</string>
    <string name="text_search">Tìm kiếm ....</string>
    <string name="text_uname">Tên</string>
    <string name="text_project_name">Tên dự án</string>
    <string name="text_start_time">"Bắt đầu: "</string>
    <string name="text_end">Kết thúc:</string>
    <string name="text_project_leader">Trưởng nhóm dự án</string>
    <string name="text_add">Thêm</string>
    <string name="text_des">Ghi chú ...</string>
    <string name="text_select_users">Chọn người dùng</string>
    <string name="leader">trưởng nhóm</string>
    <string name="new_message">Bạn có tin nhắn mới</string>
    <string name="new_notification">Bạn có thông báo mới</string>
    <string name="member">thành viên</string>
    <string name="text_add_task">Thêm nhiệm vụ</string>
    <string name="text_member">Thành viên</string>
    <string name="toast_fill_all_fields">Vui lòng nhập đủ thông tin</string>
    <string name="toast_select_member">Vui lòng chọn người dùng</string>
    <string name="toast_add_task_success">Thêm thành công</string>
    <string name="toast_date_time_err2">Thời gian phải nằm trong thời gian diễn ra dự án</string>
    <string name="text_no_des">Không có ghi chú ...</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_UID">Mã nhân viên</string>
    <string name="text_password">Mật khẩu</string>
    <string name="toast_not_permission">Bạn không có quyền truy cập vào dự án này</string>
    <string name="text_fullname">Họ và tên</string>
    <string name="text_displayname">Tên gợi nhớ</string>
    <string name="toast_password_not_match">Mật khẩu xác nhận sai</string>
    <string name="toast_update_success">Cập nhật thành công</string>
    <string name="text_users">Người dùng</string>
    <string name="text_search_result">"Kết quả tìm kiếm cho: "</string>
    <string name="text_add_member">Thêm thành viên</string>
    <string name="text_password_df">Mật khẩu (mặc định: abc123)</string>
    <string name="company_name">Asian Mobile Co.ltd</string>
    <string name="du_an">Dự án</string>
    <string name="cong_viec_cua_toi">Công việc của tôi</string>
    <string name="tin_nhan">Tin nhắn</string>
    <string name="text_password_old">Mật khẩu cũ</string>
    <string name="text_password_new">Mật khẩu mới</string>
    <string name="text_password_cf">Xác nhận mật khẩu mới</string>
    <string name="new_leader">New Leader</string>
    <string name="them_mo_ta">Thêm mô tả...</string>
    <string name="them_thanh_vien">Thêm thành viên</string>
    <string name="ho_va_ten">Họ và tên</string>
    <string name="ten_noi_bo">Tên nội bộ</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="e_meo">Email</string>
    <string name="ten_goi_nho">Tên gợi nhớ</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="thay_doi">Thay đổi</string>
</resources>