<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.profile.EditProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/btn_pfback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:src="@drawable/icon_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:src="@drawable/icon_arrow_back"
            android:text="Profile"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_pfsave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/text_save"
            android:textColor="@color/primary"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/avatar_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon_camera"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="16dp"
            android:text="@string/ho_va_ten"
            android:textColor="#9A9A9A"
            android:textSize="14dp" />


        <EditText
            android:id="@+id/pf_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/backgroud_edt"
            android:hint="@string/text_fullname"
            android:padding="12dp"
            android:textColor="@color/black" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="16dp"
            android:text="@string/e_meo"
            android:textColor="#9A9A9A"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/pf_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:alpha="0.8"
            android:background="@drawable/backgroud_edt"
            android:enabled="false"
            android:hint="Email"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="16dp"
            android:text="@string/ten_goi_nho"
            android:textColor="#9A9A9A"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/pf_displayname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:alpha="0.8"
            android:background="@drawable/backgroud_edt"
            android:drawablePadding="8dp"
            android:hint="@string/text_displayname"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="16dp"
            android:text="@string/mat_khau"
            android:textColor="#9A9A9A"
            android:textSize="14dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/backgroud_edt"
                android:drawablePadding="8dp"
                android:enabled="false"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvThayDoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="10dp"
                android:text="@string/thay_doi"
                android:textColor="@color/primary"
                android:textSize="14dp" />
        </FrameLayout>

        <TextView
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_btn"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/dang_xuat"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_add_member"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:drawableLeft="@drawable/icon_add_black"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/text_add_member"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>