<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đổi mật khẩu"
            android:fontFamily="@font/roboto_regular"
            android:textAlignment="center"
            android:textSize="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/old_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:alpha="0.8"
                    android:background="@drawable/backgroud_edt"
                    android:drawablePadding="8dp"
                    android:hint="@string/text_password_old"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:alpha="0.8"
                    android:background="@drawable/backgroud_edt"
                    android:drawablePadding="8dp"
                    android:hint="@string/text_password_new"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cf_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:alpha="0.8"
                    android:background="@drawable/backgroud_edt"
                    android:drawablePadding="8dp"
                    android:hint="@string/text_password_cf"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/savePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_save"
                android:background="@drawable/background_btn"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>